<resources>
    <string name="app_name">MedicalReport</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="generate_new_report">Generate New Report</string>
    <string name="view_existing_report">View Existing Report</string>
    <string name="title_activity_generate_report">GenerateReportActivity</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="generate_report_text">Please fill the following details</string>
    <string name="record_name">Record Name</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="title_activity_view_report">ViewReportActivity</string>
    <string name="save">Save</string>
</resources>
